<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="lang">en</string>
    <!-- The brand is the same in every locale, so it lives here only. -->
    <string name="app_name" translatable="false">Sleepy Cocktail</string>
    <string name="white_noise_volume">White Noise: %1$d%%</string>
    <string name="pink_noise_volume">Pink Noise: %1$d%%</string>
    <string name="brown_noise_volume">Brown Noise: %1$d%%</string>
    <string name="surf_noise_volume">Surf: %1$d%%</string>
    <string name="grey_noise_volume">Grey Noise: %1$d%%</string>
    <string name="green_noise_volume">Green Noise: %1$d%%</string>
    <string name="white_noise_name">White noise</string>
    <string name="pink_noise_name">Pink noise</string>
    <string name="brown_noise_name">Brown noise</string>
    <string name="surf_noise_name">Surf</string>
    <string name="grey_noise_name">Grey noise</string>
    <string name="green_noise_name">Green noise</string>
    <string name="play_button">Play</string>
    <string name="theme_switch">Switch theme</string>
    <string name="language">Language</string>
    <string name="select_language">Select Language</string>
    <string name="title_language_need">We need help to translate</string>
    <string name="text_language_need">If you want to help with the translation of the application into another language, please contact the app developer. Thank you!</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="rate_app">Rate the app</string>
    <string name="mail">Email to developer</string>
    <string name="mail_choose">Select mail app</string>
    <string name="version">Version %1$s (%2$d)</string>
    <string name="timer">Timer</string>
    <string name="credits">Credits</string>
    <string name="notification_channel_playback">Playback</string>
    <string name="notification_playing">Playing</string>
    <string name="notification_stop">Stop</string>
    <string name="update_downloaded">An update is downloaded</string>
    <string name="update_restart">Restart</string>

    <!-- Just add your language -->
    <string name="russian" translatable="false">Русский</string>
    <string name="english" translatable="false">English</string>
    <string name="german" translatable="false">Deutsch</string>
    <string name="spanish" translatable="false">Español</string>
    <string name="ukrainian" translatable="false">Українська</string>
    <string name="arabic" translatable="false">العربية</string>

    <!-- No need to translate all strings below. -->
    <string name="another_language" translatable="false">Another language</string>
    <string name="credits_text" translatable="false">
        <b>Dev:</b> Alexander Ivanov\n
        <b>Logo:</b> Nina Ivanova
    </string>
    <string name="app_logo" translatable="false">App logo</string>
    <string name="widget_button_label">Play button</string>
    <string name="widget_dark_button_label">Dark button</string>
    <string name="widget_timer_ring_label">Timer ring</string>
    <string name="widget_moon_label">Moon</string>
    <string name="widget_icon_label">App icon</string>
    <string name="widget_wallpaper_colors_label">Wallpaper colours</string>
    <string name="widget_glass_label">Glass</string>
    <string name="widget_description">Starts your noise mix with the timer set in the app</string>
</resources>
